Added: Changes in recipe store

--- a/src/app/modules/storeFront/storeFront/storeFront.component.html
+++ b/src/app/modules/storeFront/storeFront/storeFront.component.html
@@ -3,149 +3,12 @@
 
 <div class="main-content">
   <div class="container-fluid">
-      <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+      <!-- <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
           <div class="heading col-lg-4">
               <button class="searchbutton" type ="submit"><i class="fa fa-search"                          ></i></button>
               <input type="search" placeholder="izlash" class="searchfield ">
           </div>
-      </div>
-
-      <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
-          <div class="col hp">
-              <div class="card pb-4 shadow-sm rounded">
-                  <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
-                      <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
-                  </a>
-
-                  <div class="label-top  ">
-                      <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
-
-                  </div>
-                  <div class="card-body py-0">
-                      <div class="  flex d-flex justify-content-between align-items-center">
-                          <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
-
-                          <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
-                      </div>
-                      <h5 class="card-title">
-                          <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
-                      </h5>
-
-                      <div class="d-grid gap-2 ">
-
-                          <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
-
-                      </div>
-
-                  </div>
-              </div>
-          </div>
-          <div class="col hp">
-              <div class="card pb-4 shadow-sm rounded">
-                  <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
-                      <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
-                  </a>
-
-                  <div class="label-top  ">
-                      <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
-
-                  </div>
-                  <div class="card-body py-0">
-                      <div class="  flex d-flex justify-content-between align-items-center">
-                          <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
-
-                          <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
-                      </div>
-                      <h5 class="card-title">
-                          <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
-                      </h5>
-
-                      <div class="d-grid gap-2 ">
-
-                          <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
-
-                      </div>
-
-                  </div>
-              </div>
-          </div>
-          <div class="col hp">
-              <div class="card pb-4 shadow-sm rounded">
-                  <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
-                      <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
-                  </a>
-
-                  <div class="label-top  ">
-                      <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
-
-                  </div>
-                  <div class="card-body py-0">
-                      <div class="  flex d-flex justify-content-between align-items-center">
-                          <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
-
-                          <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
-                      </div>
-                      <h5 class="card-title">
-                          <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
-                      </h5>
-
-                      <div class="d-grid gap-2 ">
-
-                          <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
-
-                      </div>
-
-                  </div>
-              </div>
-          </div>
-          <div class="col hp">
-              <div class="card pb-4 shadow-sm rounded">
-                  <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
-                      <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
-                  </a>
-
-                  <div class="label-top  ">
-                      <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
-
-                  </div>
-                  <div class="card-body py-0">
-                      <div class="  flex d-flex justify-content-between align-items-center">
-                          <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
-
-                          <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
-                      </div>
-                      <h5 class="card-title">
-                          <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
-                      </h5>
-
-                      <div class="d-grid gap-2 ">
-
-                          <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
-
-                      </div>
-
-                  </div>
-              </div>
-          </div>
-      </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+      </div> -->
       <div class="row">
           <div class="col-md-12">
 
@@ -178,7 +41,7 @@
 
 
 
-      <div class="row mt-3">
+      <!-- <div class="row mt-3">
           <div class="col-md-12">
 
               <select class="custom-select w-100 mr-4">
@@ -211,16 +74,163 @@
               </select>
           </div>
 
-      </div>
+      </div> -->
 
+      <div class="row row-cols-1 row-cols-xs-2 row-cols-sm-2 row-cols-lg-4 g-3">
+        <div *ngFor="let row of dataSource?.data" class="col hp">
+            <div class="col hp">
+                <div class="card pb-4 shadow-sm rounded">
+                    <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                        <img [src]="row?.recipe_pic" (error)="getImg('')" class="card-img-top" alt="product.title"/>
+                    </a>
+    
+                    <div class="label-top  ">
+                        <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
+    
+                    </div>
+                    <div class="card-body py-0">
+                        <div class="  flex d-flex justify-content-between align-items-center">
+                            <h3 class="px-0 float-start badge rounded-pill bg-success">{{row?.recipe_name}}</h3>
+    
+                            <h3 class="float-end"><a class="font-weight-bold text-uppercase aff-link">${{row?.total_price}}</a></h3>
+                        </div>
+                        <h5 class="card-title">
+                            <a class="small" target="_blank">{{row?.recipe_description}}</a>
+                        </h5>
+    
+                        <div class="d-grid gap-2 ">
+    
+                            <button *ngIf="ifAdded(row?.recipe_id)" class="btn btn-outline-primary rounded-pill" (click)="addToCart(row)">add to cart</button>
+    
+                        </div>
+    
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="col hp">
+            <div class="card pb-4 shadow-sm rounded">
+                <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                    <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
+                </a>
 
+                <div class="label-top  ">
+                    <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
 
-    <div class="container-fluid">
+                </div>
+                <div class="card-body py-0">
+                    <div class="  flex d-flex justify-content-between align-items-center">
+                        <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
+
+                        <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
+                    </div>
+                    <h5 class="card-title">
+                        <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
+                    </h5>
+
+                    <div class="d-grid gap-2 ">
+
+                        <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col hp">
+            <div class="card pb-4 shadow-sm rounded">
+                <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                    <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
+                </a>
+
+                <div class="label-top  ">
+                    <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
+
+                </div>
+                <div class="card-body py-0">
+                    <div class="  flex d-flex justify-content-between align-items-center">
+                        <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
+
+                        <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
+                    </div>
+                    <h5 class="card-title">
+                        <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
+                    </h5>
+
+                    <div class="d-grid gap-2 ">
+
+                        <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col hp">
+            <div class="card pb-4 shadow-sm rounded">
+                <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                    <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
+                </a>
+
+                <div class="label-top  ">
+                    <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
+
+                </div>
+                <div class="card-body py-0">
+                    <div class="  flex d-flex justify-content-between align-items-center">
+                        <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
+
+                        <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
+                    </div>
+                    <h5 class="card-title">
+                        <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
+                    </h5>
+
+                    <div class="d-grid gap-2 ">
+
+                        <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="col hp">
+            <div class="card pb-4 shadow-sm rounded">
+                <a class="bg- rounded"  href="https://amzn.to/42dsdGC" target="_blank">
+                    <img src="assets/img/dinner.png" class="card-img-top" alt="product.title" />
+                </a>
+
+                <div class="label-top  ">
+                    <i class="far fa-heart shadow-sm p-2 rounded bg-white" style="cursor: pointer"></i>
+
+                </div>
+                <div class="card-body py-0">
+                    <div class="  flex d-flex justify-content-between align-items-center">
+                        <h3 class="px-0 float-start badge rounded-pill bg-success">Recipe Name</h3>
+
+                        <h3 class="float-end"><a href="#" class="font-weight-bold text-uppercase aff-link">$123</a></h3>
+                    </div>
+                    <h5 class="card-title">
+                        <a class="small" target="_blank" href="#">Razer Blade 15 Base Gaming Laptop 2020</a>
+                    </h5>
+
+                    <div class="d-grid gap-2 ">
+
+                        <button href="#" class="btn btn-outline-primary rounded-pill">add to cart</button>
+
+                    </div>
+
+                </div>
+            </div>
+        </div> -->
+    </div>
+
+    <!-- <div class="container-fluid">
         <div class="">
             <div class="row px-3 mt-3">
 
 
-                <!-- Speedway Store Card -->
                 <div *ngFor="let row of dataSource?.data" class="col-lg-6 ">
 
                     <div class="row store-card shadow justify-content-between p-3 m-1">
@@ -230,16 +240,13 @@
                                 <h5>{{row.recipe_name}}</h5>
                                 <p>{{row.recipe_description}}</p>
                                 <span>{{row.total_price}} <strong>USD</strong></span>
-                                <!-- <address>390 East Exchange Street, Akron, OH 44304-1853</address> -->
                             </div>
                         </div>
                         <div class="col-lg-4 text-right">
-                            <!-- [disabled]="ifAdded(row.recipe_id)" -->
                             <button *ngIf="ifAdded(row.recipe_id)" color="primary" class="btn btn-primary"  mat-button (click)="addToCart(row)">
                                 <i class="material-icons mr-2" (click)="openCart()" style="cursor: pointer;">
                                 shopping_cart
                             </i>Add to Cart!
-                                <!-- <mat-icon class="mx-0">clear</mat-icon> -->
                             </button>
                         </div>
                     </div>
@@ -247,23 +254,7 @@
 
 
                 </div>
-
-                <!-- BP Store Card -->
-                <!-- <div class="col-6 position-relative ">
-
-                    <span class="store-rating ms-auto position-absolute">4.3</span>
-
-                    <div class="store-card">
-                        <img src="assets/img/apple-icon-.png" alt="BP" style="width: 100px; height: auto;"> 
-                        <div>
-                            <h5>BP (778 Grant St)</h5>
-                            <p>Convenience · Snacks · Everyday Essentials</p>
-                            <address>778 Grant St, Akron, OH 44311</address>
-                        </div>
-                    </div>
-
-                </div> -->
             </div>
         </div>
-    </div>
+    </div> -->
 </div>
